--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-12">
+		<nav>
+			<a routerLink="/"  routerLinkActive="active" class="btn btn-secondary btn-sm mr-2" >Results</a>
+			<a routerLink="/new" class="btn btn-sm btn-secondary mr-2">New</a>
+			<a routerLink="/" class="btn btn-sm btn-secondary">Table</a>
+		</nav>
+
+			
+			<router-outlet></router-outlet>
+
+		</div>
+	</div>
+</div>
+
