--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 		<nav>
 			<a routerLink="/"  routerLinkActive="active" class="btn btn-secondary btn-sm mr-2" >Results</a>
 			<a routerLink="/new" class="btn btn-sm btn-secondary mr-2">New</a>
-			<a routerLink="/" class="btn btn-sm btn-secondary">Table</a>
+			<a routerLink="/table" class="btn btn-sm btn-secondary">Table</a>
 		</nav>
 
 		<br>
