--- a/src/app/results/new/new.component.html
+++ b/src/app/results/new/new.component.html
@@ -3,31 +3,39 @@
   <div class="form-row">
     <div class="form-group col-sm-3">
       <label for="">Team Name</label>
-      <select class="form-control input-sm" name="team1" [(ngModel)]="result.team1">
+      <select class="form-control input-sm" name="team1" [(ngModel)]="result.team1" required>
         <option *ngFor="let team of teams" [ngValue]="team">{{team.teamName}}</option>
       </select>
       <label for="">Score</label>
-      <input type="text" class="form-control form-control-sm" name="score1" [(ngModel)]="result.score1">
+      <input type="text" 
+      		class="form-control form-control-sm" 
+      		name="score1" 
+      		[(ngModel)]="result.score1" 
+      		required>
     </div>
 
     <div class="form-group col-sm-3">
     	<label for="">Team Name</label>
-		<select class="form-control input-sm" name="team2" [(ngModel)]="result.team2" >
+		<select class="form-control input-sm" name="team2" [(ngModel)]="result.team2" required >
                 <option *ngFor="let team of teams" [ngValue]="team">{{team.teamName}}</option>
         </select>
 		
 		<label for="">Score</label>
-		<input type="text" class="form-control form-control-sm" name="score2" [(ngModel)]="result.score2" >
+		<input type="text" class="form-control form-control-sm" 
+				name="score2" 
+				[(ngModel)]="result.score2"
+				required >
     </div>
 
-  </div>
+  </div><!-- end .form-row -->
 
   <div class="form-row">
   	<div class="form-group col-sm-3">
 		<label for="">Date</label>
-		<input type="date" class="form-control form-control-sm" [(ngModel)]="result.date" name="date" >
+		<input type="date" class="form-control form-control-sm" 
+		[(ngModel)]="result.date" name="date" required >
 	</div>
-  </div>
+  </div><!-- end .form-row -->
 
 	<button class="btn btn-sm btn-danger" type="submit">Enter</button>
  
