--- a/src/app/results/table/table.component.html
+++ b/src/app/results/table/table.component.html
@@ -17,7 +17,7 @@
         <tbody>
         <tr *ngFor="let data of tabledata">
             <td>pos</td>
-            <td>{{data.teamName}}</td>
+            <td>{{data.team | teamName}}</td>
             <td>{{data.played}}</td>
             <td>{{data.win}}</td>
             <td>{{data.draw}}</td>
