--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<h1 id="logo">SIMPLE LEAGUE RESULTS</h1>
+				<img style="background-image: url(http://www.twitrcovers.com/wp-content/uploads/2014/10/on-the-stadium-l.jpg);background-size: cover; background-position:bottom; "  width="100%" height="200">
+			</div>
+		</div>
+	</div>
+	<hr>
+<div class="container">
 	<div class="row">
 		<div class="col-sm-12">
 		<nav>
@@ -8,10 +17,7 @@
 		</nav>
 
 		<br>
-
-			
 			<router-outlet></router-outlet>
-
 		</div>
 	</div>
 </div>
