--- a/src/app/results/form/form.component.html
+++ b/src/app/results/form/form.component.html
@@ -1,1 +1,42 @@
-<p>form works!</p>
+  <div *ngIf="errors" class="alert alert-danger">Error: {{errorMessage}}</div>
+<form (submit)="onSubmit(resultForm)" #resultForm="ngForm">
+  <div class="form-row">
+    <div class="form-group col-sm-3">
+      <label for="">Team Name</label>
+      <select class="form-control input-sm" name="team1" [(ngModel)]="result.team1" required>
+        <option *ngFor="let team of teams" [value]="team.teamId">{{team.teamName}}</option>
+      </select>
+
+      <label for="">Score</label>
+      <input type="text" 
+          class="form-control form-control-sm" 
+          name="score1" 
+          [(ngModel)]="result.score1" 
+          required>
+    </div>
+
+    <div class="form-group col-sm-3">
+      <label for="">Team Name</label>
+    <select class="form-control input-sm" name="team2" [(ngModel)]="result.team2" required >
+                <option *ngFor="let team of teams" [value]="team.teamId">{{team.teamName}}</option>
+        </select>
+    
+    <label for="">Score</label>
+    <input type="text" class="form-control form-control-sm" 
+        name="score2" 
+        [(ngModel)]="result.score2" required>
+    </div>
+
+  </div><!-- end .form-row -->
+
+  <div class="form-row">
+    <div class="form-group col-sm-3">
+    <label for="">Date</label>
+    <input type="date" class="form-control form-control-sm" 
+    [(ngModel)]="result.date" name="date" required >
+  </div>
+  </div><!-- end .form-row -->
+
+  <button class="btn btn-sm btn-danger" type="submit" *ngIf="mode=='edit'" [disabled]="!resultForm.form.valid">Update</button>
+  <button class="btn btn-sm btn-danger" type="submit" *ngIf="mode=='new'" [disabled]="!resultForm.form.valid">Enter</button>
+</form>
