--- a/src/app/results/results/results.component.css
+++ b/src/app/results/results/results.component.css
@@ -1,3 +1,19 @@
 .winner{
 	color: green;
 }
+
+p{
+	float: left;
+	width: 80%;
+	margin-bottom: 0;
+}
+
+p:hover{
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+.btn-remove:hover{
+	cursor: pointer;
+	color:red;
+}
