--- a/src/app/results/results/results.component.html
+++ b/src/app/results/results/results.component.html
@@ -2,9 +2,16 @@
 
 <hr>
 
-<div *ngFor="let result of groupResults">
+<div *ngFor="let result of groupResults" class="mb-3">
 	<h6>{{result.date}}</h6>
-	<p *ngFor="let game of result.games"> 
-		<span [ngClass]="{'winner': game.score1 > game.score2}">{{game.team1.teamName}} ({{game.score1}})</span> vs <span [ngClass]="{'winner': game.score2 > game.score1}">{{game.team2.teamName}} ({{game.score2}})</span>
-	</p>
+
+	<div *ngFor="let game of result.games">
+		<p (click)="editResult(game.id)"> 
+			<span [ngClass]="{'winner': game.score1 > game.score2}">{{game.team1 | teamName}} ({{game.score1}})</span> 
+			vs 
+			<span [ngClass]="{'winner': game.score2 > game.score1}">{{game.team2 | teamName}} ({{game.score2}})</span>
+		</p>
+		<span class="btn-remove">✘</span>
+	</div>
+	<div class="clearfix"></div>
 </div>
